--- a/_config.yml
+++ b/_config.yml
@@ -170,7 +170,7 @@ portfolio:
   # Portfolio Item
   - title: S<span class="thin">era</span> Style
     categories: []
-    image: Logo_Gross.png
+    image: Logo_Gross.PNG
     url: "#"
     text: "Bandshooting 2020"
 
