--- a/_config.yml
+++ b/_config.yml
@@ -324,7 +324,7 @@ contact-description: Falls Du mich direkt erreichen möchtest oder Fragen hast, 
 #####################################
 #############   Footer   ############
 #####################################
-footer-description: Copyright 2023 Marcus Brandt. Designed by Stephan Jacobs. All right reserved
+footer-description: Copyright 2023 Marcus Brand. Designed by Stephan Jacobs. All right reserved
 footer-copyright-text: Marcus Brandt
 footer-copyright-url: https://www.autumnalmanacs.com
 footer-copyright-year: 2023
