--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ title: The Autumn Almanacs
 # Website language
 lang: en-US
 # Header Title
-header-title: 
+header-title: Neu in Herne!
 # Header Tagline
 headter-tagline: 
 
@@ -129,7 +129,7 @@ mailchimp:
 #############   About   #############
 #####################################
 about-title: Über
-about-description: Wir sind Ihr Ansprechpartner in Bochum und Umgebung, wenn es um Haupt- und Abgasuntersuchungen oder Änderungsabnahmen sowie weitere Service- und Gutachterdienstleistungen rund um zwei, drei und vier Räder geht.
+about-description: Wir sind Ansprechpartner in Herne und Umgebung, wenn es um Haupt- und Abgasuntersuchungen oder Änderungsabnahmen sowie weitere Servicedienstleistungen rund um zwei, drei, und vier Räder geht.
 #####################################
 #############  Features  ############
 #####################################
@@ -325,6 +325,6 @@ contact-description: Falls Du mich direkt erreichen möchtest oder Fragen hast, 
 #############   Footer   ############
 #####################################
 footer-description: Copyright 2023 Marcus Brand. Designed by Stephan Jacobs. All right reserved
-footer-copyright-text: Marcus Brandt
-footer-copyright-url: https://www.autumnalmanacs.com
+footer-copyright-text: Marcus Brand
+footer-copyright-url: https://ruemorgue2.github.io
 footer-copyright-year: 2023
