--- a/_config.yml
+++ b/_config.yml
@@ -326,5 +326,5 @@ contact-description: Falls Du mich direkt erreichen möchtest oder Fragen hast, 
 #####################################
 footer-description: Copyright 2023 Marcus Brand. Designed by Stephan Jacobs. All right reserved
 footer-copyright-text: Marcus Brand
-footer-copyright-url: https://ruemorgue2.github.io
+footer-copyright-url: https:/www.xn--gt-prfung-brand-0vbd.de/
 footer-copyright-year: 2023
