Änderungen Sprache u Github

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ facebook_username: 61565879413514
 # twitter_username: 
 instagram_username: the_royal_flash
 # linkedin_username: 
-github_username:  RueMorgue2
+# github_username:  RueMorgue2
 youtube_channel_id: UCg3tXPBqIA7hK8Dpt0iZHzw
 # reddit_username: /
 # behance_username: /
@@ -45,7 +45,7 @@ author-name: The Royal Flash
 # URL for the Image of the Author
 author-image: /assets/images/RoyalFlash.jfif
 # 60 Words About the Author
-author-about: We are the german Metal Band "The Royal Flash" sitting in the heart of Germany, the Ruhrpott. We make a mixture of Metal and Rock Music with Influences of several Genres. Although fun is one of our main motivations, we strive for the stars and are always searching for live gigs to present our material. Most of our stuff is self written, but additional - as a suprise - we are adding some Cover-/Tribute-Pieces. Stay tune and follow us - we want to "Come Around" - Check our Material!
+author-about: We are the german Metal Band "The Royal Flash" sitting in the heart of Germany, the Ruhrpott. We play a mixture of Metal and Rock Music with Influences of several Genres. Although fun is one of our main motivations, we strive for the stars and are always searching for live gigs to present our material. Most of our stuff is self written, but additional - as a suprise - we are adding some Cover-/Tribute-Pieces. Stay tuned and follow us - we want to "Come Around" - Check out our Material!
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
 author-url: https://www.the-royal-flash.de
 
