--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ disqus-shortname:
 # Name of the Author
 author-name: The Royal Flash
 # URL for the Image of the Author
-author-image: /assets/images/RoyalFlash.jfif
+author-image: /assets/images/Foto2.jpg
 # 60 Words About the Author
 author-about: We are the german Metal Band "The Royal Flash" sitting in the heart of Germany, the Ruhrpott. We play a mixture of Metal and Rock Music with Influences of several Genres. Although fun is one of our main motivations, we strive for the stars and are always searching for live gigs to present our material. Most of our stuff is self written, but additional - as a suprise - we are adding some Cover-/Tribute-Pieces. Stay tuned and follow us - we want to "Come Around" - Check out our Material!
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
